add jenkins config

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,3 @@
-
-
 ### EXECUTABLES
 
 # all
@@ -9,10 +7,8 @@ add_executable(all_unit_tests ${TEST_SOURCES})
 target_include_directories(all_unit_tests PRIVATE ${Boost_INCLUDE_DIRS})
 target_link_libraries(all_unit_tests ${Boost_LIBRARIES})
 
-
-# primitives
-
-
+add_test(all all_unit_tests)
+add_test(NAME primitives_tests COMMAND all_unit_tests -t primitives)
 
 
 
