--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,10 @@ add_library(primitives ${PRIMITIVES_SOURCES})
 file(GLOB_RECURSE SERIALIZATION_SOURCES "chasm/serialization/*.cpp")
 add_library(serialization ${SERIALIZATION_SOURCES})
 
+# supported_tokens
+file(GLOB_RECURSE SUPPORTED_TOKENS_SOURCES "chasm/common/supported_tokens/*.cpp")
+add_library(supported_tokens ${SUPPORTED_TOKENS_SOURCES})
+
 
 ### EXECUTABLES
 add_executable(chasm main.cpp)
