--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,11 @@ endif()
 set(CMAKE_CXX_FLAGS "-Werror -pedantic")
 
 find_package(Boost 1.68 REQUIRED COMPONENTS unit_test_framework serialization)
+find_package(OpenSSL 1.0 REQUIRED COMPONENTS Crypto)
 
 include_directories(src/)
 include_directories(${Boost_INCLUDE_DIRS})
-
+include_directories(${OPENSSL_INCLUDE_DIR})
 
 add_subdirectory(src/)
 
