--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,10 +5,8 @@
 file(GLOB_RECURSE TEST_SOURCES "*.cpp")
 add_executable(all_unit_tests ${TEST_SOURCES})
 target_include_directories(all_unit_tests PRIVATE ${Boost_INCLUDE_DIRS})
-target_link_libraries(all_unit_tests ${Boost_LIBRARIES} primitives)
+target_link_libraries(all_unit_tests ${Boost_LIBRARIES} primitives cryptography)
 
 add_test(all all_unit_tests)
-add_test(NAME primitives_tests COMMAND all_unit_tests -t primitives)
-
 
 
