fix openssl linker problem

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,8 +16,9 @@ add_library(supported_tokens ${SUPPORTED_TOKENS_SOURCES})
 # cryptography
 file(GLOB_RECURSE CRYPTOGRAPHY_SOURCES "chasm/cryptography/*.cpp")
 add_library(cryptography ${CRYPTOGRAPHY_SOURCES})
+target_link_libraries(cryptography ${OPENSSL_CRYPTO_LIBRARY})
 
 ### EXECUTABLES
 add_executable(chasm main.cpp)
-target_link_libraries(chasm primitives serialization ${OPENSSL_CRYPTO_LIBRARY})
+target_link_libraries(chasm primitives serialization)
 
