feat: implement serialization of primitives and sample classes

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,8 +7,7 @@ add_executable(all_unit_tests ${TEST_SOURCES})
 target_include_directories(all_unit_tests PRIVATE ${Boost_INCLUDE_DIRS})
 target_link_libraries(all_unit_tests ${Boost_LIBRARIES} primitives)
 
-add_test(all all_unit_tests)
-add_test(NAME primitives_tests COMMAND all_unit_tests -t primitives)
-
-
+# serialization
+add_executable(serialization_unit_tests main_test.cpp chasm/serialization/PrimitivesTests.cpp)
+target_link_libraries(serialization_unit_tests ${Boost_LIBRARIES})
 
