--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ endif()
 
 set(CMAKE_CXX_FLAGS "-Werror -pedantic")
 
-find_package(Boost 1.68 REQUIRED COMPONENTS unit_test_framework serialization)
+find_package(Boost 1.67 REQUIRED COMPONENTS unit_test_framework)
 find_package(OpenSSL 1.0 REQUIRED COMPONENTS Crypto)
 
 include_directories(src/)
@@ -17,5 +17,4 @@ include_directories(${OPENSSL_INCLUDE_DIR})
 
 add_subdirectory(src/)
 
-enable_testing()
 add_subdirectory(tests/)
