--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,10 @@ add_library(primitives ${PRIMITIVES_SOURCES})
 file(GLOB_RECURSE SERIALIZATION_SOURCES "chasm/serialization/*.cpp")
 add_library(serialization ${SERIALIZATION_SOURCES})
 
+# UI
+file(GLOB_RECURSE UI_SOURCES "chasm/ui/*.cpp")
+add_library(ui ${UI_SOURCES})
+
 # tokens
 file(GLOB_RECURSE SUPPORTED_TOKENS_SOURCES "chasm/tokens/*.cpp")
 add_library(supported_tokens ${SUPPORTED_TOKENS_SOURCES})
@@ -20,5 +24,5 @@ target_link_libraries(cryptography ${OPENSSL_CRYPTO_LIBRARY})
 
 ### EXECUTABLES
 add_executable(chasm main.cpp)
-target_link_libraries(chasm primitives serialization)
+target_link_libraries(chasm primitives serialization cryptography ui)
 
