--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,12 @@ set(CMAKE_CXX_FLAGS "-Werror -pedantic")
 
 find_package(Boost 1.68 REQUIRED COMPONENTS unit_test_framework serialization)
 find_package(OpenSSL 1.0 REQUIRED COMPONENTS Crypto)
+find_library(LevelDB_LIBRARY leveldb)
 
 include_directories(src/)
 include_directories(${Boost_INCLUDE_DIRS})
 include_directories(${OPENSSL_INCLUDE_DIR})
+include_directories(${LEVELDB_INCLUDE})
 
 add_subdirectory(src/)
 
