feat: add database storage methods
Refers #14

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,7 +25,7 @@ target_link_libraries(cryptography ${OPENSSL_CRYPTO_LIBRARY})
 # database
 file(GLOB_RECURSE DATABASE_SOURCES "chasm/db/*.cpp")
 add_library(database ${DATABASE_SOURCES})
-target_link_libraries(database ${LevelDB_LIBRARY})
+target_link_libraries(database ${LevelDB_LIBRARY} ui)
 
 ### EXECUTABLES
 add_executable(chasm main.cpp)
