--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [flake8]  # Flake8 section must be the first one
-max-line-length:80
+max-line-length : 80
 
 [tool:pytest]
-testpaths=tests
+testpaths = tests
 
 [bdist_wheel]
 universal = 0
@@ -11,13 +11,13 @@ universal = 0
 max_line_length = 80
 
 [mypy]
-ignore_missing_imports=True
-strict_optional=True
-follow_imports=silent
-disallow_untyped_calls=False
-disallow_untyped_defs=False
-check_untyped_defs=False
-warn_redundant_casts=True
-warn_return_any=False
-warn_unused_ignores=True
-no_implicit_optional=True
+ignore_missing_imports = True
+strict_optional = True
+follow_imports = silent
+disallow_untyped_calls = False
+disallow_untyped_defs = False
+check_untyped_defs = False
+warn_redundant_casts = True
+warn_return_any = False
+warn_unused_ignores = True
+no_implicit_optional = True
